--- a/cars/.env
+++ b/cars/.env
@@ -1,6 +1,6 @@
 PORT="8080"
-DB_USER=bojan
-DB_PASSWORD=bojan
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_DIALECT=postgres
 DB_NAME=xws
