--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,10 @@
     "bootstrap-vue": "^2.11.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
-    "vue-jquery": "^1.0.6"
+    "vue-jquery": "^1.0.6",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.6",
+    "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
