wip-docker-service-discovery

--- a/carRent/src/main/resources/application.properties
+++ b/carRent/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.platform=postgres
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/xws
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 
 #JPA-Hibernate
 spring.jpa.show-sql = true
