--- a/authentication-app/src/main/resources/application.properties
+++ b/authentication-app/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8081
+server.port=8080
+spring.application.name=authentication
 
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -6,9 +7,9 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/xws
+spring.datasource.url=${DB_PATH:jdbc:postgresql://localhost:5432/}
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 
 #JPA-Hibernate
 spring.jpa.show-sql = true
