--- a/carRent/src/main/resources/application.properties
+++ b/carRent/src/main/resources/application.properties
@@ -1,19 +1,22 @@
+server.port=8080
+spring.application.name=rent
+
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/xws
+spring.datasource.url=${DB_PATH:jdbc:postgresql://localhost:5432/}
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=postgres
 
 #JPA-Hibernate
 spring.jpa.show-sql = true
 spring.jpa.generate-ddl = true
 
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #optimizacija za postgres upite
