--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,25 @@ services:
         depends_on:
             - consul-server
 
-    authentication-service:
-        image: authentication-service
+    # authentication-service:
+    #     image: authentication-service
+    #     build:
+    #         context: ./authentication-app
+    #         dockerfile: Dockerfile
+    #     tty: true
+    #     depends_on:
+    #         - consul-server
+    #         - db
+    #     restart: unless-stopped
+    #     environment:
+    #         DB_PATH: jdbc:postgresql://db:5432/
+    #     networks:
+    #         - static-network
+
+    admin-service:
+        image: admin-service
         build:
-            context: ./authentication-app
+            context: ./admin-app
             dockerfile: Dockerfile
         tty: true
         depends_on:
@@ -89,25 +104,25 @@ services:
         networks:
             - static-network
 
-    client-front:
-        image: client-front
-        build:
-            context: ./client
-            dockerfile: Dockerfile
-        tty: true
-        ports:
-            - "8081:8081"
-        restart: unless-stopped
+    # client-front:
+    #     image: client-front
+    #     build:
+    #         context: ./client
+    #         dockerfile: Dockerfile
+    #     tty: true
+    #     ports:
+    #         - "8081:8081"
+    #     restart: unless-stopped
 
-    admin-front:
-        image: admin-front
-        build:
-            context: ./admin
-            dockerfile: Dockerfile
-        tty: true
-        ports:
-            - "8082:8081"
-        restart: unless-stopped
+    # admin-front:
+    #     image: admin-front
+    #     build:
+    #         context: ./admin
+    #         dockerfile: Dockerfile
+    #     tty: true
+    #     ports:
+    #         - "8082:8081"
+    #     restart: unless-stopped
 
 networks:
     static-network:
