--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,37 +58,37 @@ services:
         networks:
             - static-network
 
-    rent-service:
-        image: rent-service
-        build:
-            context: ./carRent
-            dockerfile: Dockerfile
-        tty: true
-        depends_on:
-            - consul-server
-            - db 
-        restart: unless-stopped
-        environment:
-            DB_PATH: jdbc:postgresql://db:5432/
-        networks:
-            - static-network
+    #rent-service:
+    #    image: rent-service
+    #    build:
+    #        context: ./carRent
+    #        dockerfile: Dockerfile
+    #   tty: true
+    #    depends_on:
+    #        - consul-server
+    #        - db 
+    #    restart: unless-stopped
+    #    environment:
+    #        DB_PATH: jdbc:postgresql://db:5432/
+    #    networks:
+    #        - static-network
 
-    cars-service:
-        image: cars-service
-        build:
-            context: ./cars
-            dockerfile: Dockerfile
-        tty: true
-        depends_on:
-            - consul-server
-            - db
-        restart: unless-stopped
-        environment:
-            DB_PATH: postgres://postgres:postgres@db:5432/
-            CONSUL_ADDR: consul-server:8500
-            MY_ADDR: cars-service
-        networks:
-            - static-network
+    #cars-service:
+    #    image: cars-service
+    #    build:
+    #        context: ./cars
+    #        dockerfile: Dockerfile
+    #    tty: true
+    #   depends_on:
+    #        - consul-server
+    #        - db
+    #    restart: unless-stopped
+    #    environment:
+    #        DB_PATH: postgres://postgres:postgres@db:5432/
+    #        CONSUL_ADDR: consul-server:8500
+    #        MY_ADDR: cars-service
+    #    networks:
+    #        - static-network
 
     gateway:
         image: gateway
@@ -114,15 +114,15 @@ services:
     #         - "8081:8081"
     #     restart: unless-stopped
 
-    admin-front:
-        image: admin-front
-        build:
-            context: ./admin
-            dockerfile: Dockerfile
-        tty: true
-        ports:
-            - "8082:8081"
-        restart: unless-stopped
+    #admin-front:
+    #    image: admin-front
+    #    build:
+    #        context: ./admin
+    #        dockerfile: Dockerfile
+    #    tty: true
+    #    ports:
+    #        - "8082:8081"
+    #    restart: unless-stopped
 
 
 networks:
