--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,20 +28,20 @@ services:
         depends_on:
             - consul-server
 
-    # authentication-service:
-    #     image: authentication-service
-    #     build:
-    #         context: ./authentication-app
-    #         dockerfile: Dockerfile
-    #     tty: true
-    #     depends_on:
-    #         - consul-server
-    #         - db
-    #     restart: unless-stopped
-    #     environment:
-    #         DB_PATH: jdbc:postgresql://db:5432/
-    #     networks:
-    #         - static-network
+    authentication-service:
+        image: authentication-service
+        build:
+            context: ./authentication-app
+            dockerfile: Dockerfile
+        tty: true
+        depends_on:
+            - consul-server
+            - db
+        restart: unless-stopped
+        environment:
+            DB_PATH: jdbc:postgresql://db:5432/
+        networks:
+            - static-network
 
     admin-service:
         image: admin-service
@@ -73,23 +73,23 @@ services:
     #    networks:
     #        - static-network
 
-    cars-service:
-        image: cars-service
-        build:
-            context: ./cars
-            dockerfile: Dockerfile
-        tty: true
-        depends_on:
-            - consul-server
-            - db
-        restart: unless-stopped
-        environment:
-            DB_PATH: postgres://postgres:postgres@db:5432/
-            CONSUL_ADDR: consul-server:8500
-            MY_ADDR: cars-service
-            PORT: 8080
-        networks:
-            - static-network
+    # cars-service:
+    #     image: cars-service
+    #     build:
+    #         context: ./cars
+    #         dockerfile: Dockerfile
+    #     tty: true
+    #     depends_on:
+    #         - consul-server
+    #         - db
+    #     restart: unless-stopped
+    #     environment:
+    #         DB_PATH: postgres://postgres:postgres@db:5432/
+    #         CONSUL_ADDR: consul-server:8500
+    #         MY_ADDR: cars-service
+    #         PORT: 8080
+    #     networks:
+    #         - static-network
 
     gateway:
         image: gateway
