--- a/admin-app/pom.xml
+++ b/admin-app/pom.xml
@@ -57,12 +57,17 @@
 			<version>2.2.2.RELEASE</version>
 		</dependency>
 
+		<dependency> <!--- -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<dependency>
+		<dependency> <!--- -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
