--- a/authentication-app/src/main/resources/application.properties
+++ b/authentication-app/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=postgres
 spring.jpa.show-sql = true
 spring.jpa.generate-ddl = true
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
