--- a/carRent/src/main/resources/application.properties
+++ b/carRent/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 
-spring.datasource.url=${DB_PATH:jdbc:postgresql://localhost:5432/}
+spring.datasource.url=${DB_PATH:jdbc:postgresql://localhost:5432/xws}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -25,3 +25,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 #spring.datasource.schema=classpath:/data.sql
 spring.datasource.continue-on-error=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
