--- a/carRent/src/main/resources/application.properties
+++ b/carRent/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 
-spring.datasource.url=${DB_PATH:jdbc:postgresql://localhost:5432/xws}
+spring.datasource.url=${DB_PATH:jdbc:postgresql://localhost:5432/}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
