--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,20 +73,20 @@ services:
         networks:
             - static-network
 
-#    rent-service:
-#        image: rent-service
-#        build:
-#            context: ./carRent
-#            dockerfile: Dockerfile
-#        tty: true
-#        depends_on:
-#            - consul-server
-#            - db
-#        restart: unless-stopped
-#        environment:
-#            DB_PATH: jdbc:postgresql://db:5432/
-#        networks:
-#            - static-network
+    rent-service:
+        image: rent-service
+        build:
+            context: ./carRent
+            dockerfile: Dockerfile
+        tty: true
+        depends_on:
+            - consul-server
+            - db
+        restart: unless-stopped
+        environment:
+            DB_PATH: jdbc:postgresql://db:5432/
+        networks:
+            - static-network
 
     cars-service:
         image: cars-service
