--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,21 +28,6 @@ services:
         depends_on:
             - consul-server
 
-    # authentication-service:
-    #     image: authentication-service
-    #     build:
-    #         context: ./authentication-app
-    #         dockerfile: Dockerfile
-    #     tty: true
-    #     depends_on:
-    #         - consul-server
-    #         - db
-    #     restart: unless-stopped
-    #     environment:
-    #         DB_PATH: jdbc:postgresql://db:5432/
-    #     networks:
-    #         - static-network
-
     # admin-service:
     #     image: admin-service
     #     build:
@@ -88,10 +73,28 @@ services:
         networks:
             - static-network
 
-    cars-service:
-        image: cars-service
+    # cars-service:
+    #     image: cars-service
+    #     build:
+    #         context: ./cars
+    #         dockerfile: Dockerfile
+    #     tty: true
+    #     depends_on:
+    #         - consul-server
+    #         - db
+    #     restart: unless-stopped
+    #     environment:
+    #         DB_PATH: postgres://postgres:postgres@db:5432/
+    #         CONSUL_ADDR: consul-server:8500
+    #         MY_ADDR: cars-service
+    #         PORT: 8080
+    #     networks:
+    #         - static-network
+    
+    user-service:
+        image: user-service
         build:
-            context: ./cars
+            context: ./user
             dockerfile: Dockerfile
         tty: true
         depends_on:
@@ -99,27 +102,9 @@ services:
             - db
         restart: unless-stopped
         environment:
-            DB_PATH: postgres://postgres:postgres@db:5432/
-            CONSUL_ADDR: consul-server:8500
-            MY_ADDR: cars-service
-            PORT: 8080
+            DB_PATH: jdbc:postgresql://db:5432/
         networks:
             - static-network
-    
-#    user-service:
-#        image: user-service
-#        build:
-#            context: ./user
-#            dockerfile: Dockerfile
-#        tty: true
-#        depends_on:
-#            - consul-server
-#            - db
-#        restart: unless-stopped
-#        environment:
-#            DB_PATH: jdbc:postgresql://db:5432/
-#        networks:
-#            - static-network
 
 #    codebook-service:
 #        image: codebook-service
