--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,23 +73,23 @@ services:
         networks:
             - static-network
 
-    # cars-service:
-    #     image: cars-service
-    #     build:
-    #         context: ./cars
-    #         dockerfile: Dockerfile
-    #     tty: true
-    #     depends_on:
-    #         - consul-server
-    #         - db
-    #     restart: unless-stopped
-    #     environment:
-    #         DB_PATH: postgres://postgres:postgres@db:5432/
-    #         CONSUL_ADDR: consul-server:8500
-    #         MY_ADDR: cars-service
-    #         PORT: 8080
-    #     networks:
-    #         - static-network
+    cars-service:
+        image: cars-service
+        build:
+            context: ./cars
+            dockerfile: Dockerfile
+        tty: true
+        depends_on:
+             - consul-server
+             - db
+        restart: unless-stopped
+        environment:
+            DB_PATH: postgres://postgres:postgres@db:5432/
+            CONSUL_ADDR: consul-server:8500
+            MY_ADDR: cars-service
+            PORT: 8080
+        networks:
+            - static-network
     
     user-service:
         image: user-service
