--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,25 +120,25 @@ services:
         networks:
             - static-network
 
-#    client-front:
-#        image: client-front
-#        build:
-#            context: ./client
-#            dockerfile: Dockerfile
-#        tty: true
-#        ports:
-#            - "8081:8081"
-#        restart: unless-stopped
+    client-front:
+        image: client-front
+        build:
+            context: ./client
+            dockerfile: Dockerfile
+        tty: true
+        ports:
+            - "8081:8081"
+        restart: unless-stopped
 
-    #admin-front:
-    #    image: admin-front
-    #    build:
-    #        context: ./admin
-    #        dockerfile: Dockerfile
-    #    tty: true
-    #    ports:
-    #        - "8082:8081"
-    #    restart: unless-stopped
+    admin-front:
+        image: admin-front
+        build:
+            context: ./admin
+            dockerfile: Dockerfile
+        tty: true
+        ports:
+            - "8082:8081"
+        restart: unless-stopped
 
 networks:
     static-network:
