--- a/carRent/src/main/resources/application.properties
+++ b/carRent/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql = true
 spring.jpa.generate-ddl = true
 
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #optimizacija za postgres upite
