--- a/carRent/src/main/resources/application.properties
+++ b/carRent/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.datasource.continue-on-error=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
