--- a/cars-ads-app/src/main/resources/application.properties
+++ b/cars-ads-app/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 
 spring.datasource.continue-on-error=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
