--- a/community/src/main/resources/application.properties
+++ b/community/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+server.port=8080
+spring.application.name=community
+
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 
@@ -17,3 +21,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
+spring.datasource.continue-on-error=true
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+feign.client.config.default.connectTimeout: 160000000
+feign.client.config.default.readTimeout: 160000000
