--- a/agent-back/src/main/resources/application.properties
+++ b/agent-back/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.datasource.platform=postgres
 #spring.datasource.password=postgres
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/agentback
-spring.datasource.username=bojan
-spring.datasource.password=bojan
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 #JPA-Hibernate
 spring.jpa.show-sql = true
